--- a/style.css
+++ b/style.css
@@ -1,12 +1,45 @@
 :root {
-	--DAY: #895656;
-	--NIGHT: #000000;
-	--whoKnows: #5312ff;
+	--color-1: black;
 }
-  
+
 body {
-	background-color: var(--DAY);
 	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+}
+
+form {
+	margin: 5px;
+	border: 2px dashed;
+	padding: 5px;
+}
+
+nav {
+	position: sticky;
+	top: 0;
+	overflow: hidden;
+	background-color: black;
+}
+
+nav a {
+	display: inline-block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px;
+	text-decoration: none;
+}
+
+h1 {
+	text-align: center;
+}
+
+.planet {
+	border-radius: 50%;
+	width: 25%;
+	padding: 2px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 section {
