--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
 	--color-1: black;
 }
 
+/* ------------ ELEMENTS ------------ */
+
+main, section, div, form, nav {
+	border: 1px solid gray;
+}
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	color: white;
@@ -32,16 +38,6 @@ h1 {
 	text-align: center;
 }
 
-.planet {
-	border-radius: 50%;
-	width: 25%;
-	padding: 2px;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
 section {
 	margin: 5px;
 }
@@ -51,6 +47,8 @@ form {
 	border: 2px dashed var(--NIGHT);
 	padding: 5px;
 }
+
+/* ------------ CLASSES ------------ */
 
 .allWrong {
 	border: 5px solid var(--whoKnows);
@@ -62,4 +60,16 @@ form {
 	margin: 5px;
 	border: 2px double var(--NIGHT);
 	padding: 5px;
+}
+
+/* ------------ IDs ------------ */
+
+#planetImg {
+	border-radius: 50%;
+	width: 25%;
+	padding: 2px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
