--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 :root {
-	--color-1: black;
+	--color-1: white; /* text elements */
+	--color-2: black; /* background */
+	--color-3: grey;
 }
 
 body {
 	font-family: Arial, Helvetica, sans-serif;
-	color: white;
+	color: var(--color-1);
+	background-color: var(--color-2);
 }
 
 form {
@@ -17,12 +20,13 @@ nav {
 	position: sticky;
 	top: 0;
 	overflow: hidden;
-	background-color: black;
+	color: var(--color-1);
+	background-color: var(--color-2);
 }
 
 nav a {
 	display: inline-block;
-	color: #f2f2f2;
+	color: var(--color-1);
 	text-align: center;
 	padding: 14px;
 	text-decoration: none;
@@ -32,14 +36,24 @@ h1 {
 	text-align: center;
 }
 
-.planet {
+.top {
+	background-color: var(--color-2);
+	background-image: radial-gradient(circle, black, red, pink);
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 10px;
+}
+
+.item {
+	border: 1px solid black;
+}
+
+.img {
 	border-radius: 50%;
-	width: 25%;
-	padding: 2px;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	max-width: 500px;
 }
 
 section {
@@ -48,18 +62,18 @@ section {
 
 form {
 	margin: 5px;
-	border: 2px dashed var(--NIGHT);
+	border: 2px dashed var(--color-2);
 	padding: 5px;
 }
 
 .allWrong {
 	border: 5px solid var(--whoKnows);
-	background-color: var(--NIGHT);
+	background-color: var(--color-2);
 	color: var(--DAY);
 }
 
 .shill {
 	margin: 5px;
-	border: 2px double var(--NIGHT);
+	border: 2px double var(--color-2);
 	padding: 5px;
 }
