--- a/style.css
+++ b/style.css
@@ -34,7 +34,17 @@ nav {
   top: 0;
   overflow: hidden;
   background-color: black;
+  width: 100%;
+	max-width: 100vw;
+	display: grid;
+	grid-template-columns: 1fr minmax(50px, 50%) minmax(50px, 15%) ;
+	grid-template-rows: 1;
+	background-color: var(--color-1);
+	align-items: center;
+	box-sizing: border-box;
 }
+
+nav > div { margin: 1%; }
 
 nav a {
   display: inline-block;
@@ -77,22 +87,9 @@ form {
 
 /* ------------ ID ------------ */
 
-/* ------------ ID => ELEMENT ------------ */
-
-#planetImg > img {
-  border-radius: 50%;
-  width: 25%;
-  padding: 2px;
-  /* position: static; */
-  /* top: 50%; */
-  /* left: 50%; */
-  /* transform: translate(-50%, -50%); */
-}
-
-#gallery {
-  /* border: red 1px solid; */
-  display: grid;
-  grid-template-columns: auto auto auto;
+#links {
+  display: flex;
+  flex-flow: row nowrap;
 }
 
 #planet {
@@ -135,6 +132,30 @@ form {
   grid-area: planetName;
   width: 100%;
   text-align: center;
+}
+
+#gallery {
+  /* border: red 1px solid; */
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+
+  /* ------------ ID => ELEMENT ------------ */
+  
+#links > div {
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: content;
+}
+
+  #planetImg > img {
+    border-radius: 50%;
+    width: 25%;
+    padding: 2px;
+    /* position: static; */
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
 }
 
 /* ------------ ID => CLASS ------------ */
