--- a/style.css
+++ b/style.css
@@ -14,9 +14,19 @@
 /* ------------ ELEMENTS ------------ */
 
 /*To delete - colors used for grid reference*/
-h3, h4, p { color: black; }
+h3,
+h4,
+p {
+  color: black;
+}
 
-main, section, div, form, nav { border: 1px solid gray; }
+main,
+section,
+div,
+form,
+nav {
+  border: 1px solid gray;
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -35,16 +45,18 @@ nav {
   overflow: hidden;
   background-color: black;
   width: 100%;
-	max-width: 100vw;
-	display: grid;
-	grid-template-columns: 1fr minmax(50px, 50%) minmax(50px, 15%) ;
-	grid-template-rows: 1;
-	background-color: var(--color-1);
-	align-items: center;
-	box-sizing: border-box;
+  max-width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr minmax(50px, 50%) minmax(50px, 15%);
+  grid-template-rows: 1;
+  background-color: var(--color-1);
+  align-items: center;
+  box-sizing: border-box;
 }
 
-nav > div { margin: 1%; }
+nav > div {
+  margin: 1%;
+}
 
 nav a {
   display: inline-block;
@@ -54,9 +66,13 @@ nav a {
   text-decoration: none;
 }
 
-h1 { text-align: center; }
+h1 {
+  text-align: center;
+}
 
-section { margin: 5px; }
+section {
+  margin: 5px;
+}
 
 form {
   margin: 5px;
@@ -140,22 +156,22 @@ form {
   grid-template-columns: auto auto auto;
 }
 
-  /* ------------ ID => ELEMENT ------------ */
-  
+/* ------------ ID => ELEMENT ------------ */
+
 #links > div {
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: content;
 }
 
-  #planetImg > img {
-    border-radius: 50%;
-    width: 25%;
-    padding: 2px;
-    /* position: static; */
-    /* top: 50%; */
-    /* left: 50%; */
-    /* transform: translate(-50%, -50%); */
+#planetImg > img {
+  border-radius: 50%;
+  width: 25%;
+  padding: 2px;
+  /* position: static; */
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
 }
 
 /* ------------ ID => CLASS ------------ */
