--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 :root {
   --color-1: black;
   --placeholderText: gray;
+  --placeholderBorder: rgba(0, 0, 0, 0.0);
+  --font: 1;
+  --fontBig1: large;
 }
 
 /* ------------ MEDIA QUERIES ------------ */
@@ -12,6 +15,10 @@
 }
 
 /* ------------ ELEMENTS ------------ */
+
+body {
+  font-size: var(--fontBig1);
+}
 
 /*To delete - colors used for grid reference*/
 h3,
@@ -25,7 +32,7 @@ section,
 div,
 form,
 nav {
-  border: 1px solid gray;
+  border: 1px solid var(--placeholderBorder);
 }
 
 body {
@@ -48,18 +55,6 @@ nav {
   box-sizing: border-box;
 }
 
-nav > div {
-  margin: 1%;
-}
-
-nav a {
-  display: inline-block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-}
-
 h1 {
   text-align: center;
 }
@@ -69,9 +64,39 @@ section {
 }
 
 form {
-  margin: 5px;
-  border: 2px dashed var(--NIGHT);
-  padding: 5px;
+  margin: 1%;
+  border: 2px dashed var(--placeholderBorder);
+  padding: 1%;
+  width: fit-content;
+}
+
+output {
+  border: 1px dashed var(--placeholderBorder);
+}
+
+/* ------------ ELEMENT => ELEMENT ------------ */
+
+/* nav > div, nav > form { margin: 1%; } */
+
+nav a {
+  display: inline-block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+form > div {
+  margin: 1%;
+  /* margin-top: 1%; */
+  /* margin-bottom: 1%; */
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+form button {
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 /* ------------ ELEMENT => CLASS ------------ */
@@ -79,9 +104,20 @@ form {
 /* ------------ CLASS ------------ */
 
 .allWrong {
-  border: 5px solid var(--whoKnows);
-  background-color: var(--NIGHT);
-  color: var(--DAY);
+  border: 5px solid var(--placeholderBorder);
+  /* background-color: var(--NIGHT); */
+  color:  var(--placeholderText);
+}
+
+.formContainer {
+  display: flex;
+  flex-flow: row nowrap;
+  align-content: stretch;
+  align-items: stretch;
+  flex-grow: 1;
+  /* min-height: 100%; */
+  box-sizing: border-box;
+  width: fit-content;
 }
 
 .teamMember {
@@ -90,26 +126,37 @@ form {
   align-items: center;
   justify-content: center;
   margin: 5px;
-  /* border: 6px solid green; */
+  border: 6px solid var(--placeholderBorder);
   padding: 5px;
   text-align: center;
 }
 
-.contact-form {
-	display: flex;
-	justify-content: center;
+/* ------------ CLASS => ELEMENT ------------ */
+
+.formContainer div {
+  display: flex;
+  flex-flow: row nowrap;
+  align-content: stretch;
+  align-items: stretch;
+  flex-grow: 1;
+  /* min-height: 100%; */
+  box-sizing: border-box;
+  margin: auto;
 }
 
-
-.contact-form {
-	display: flex;
-	justify-content: center;
+.formContainer fieldset {
+  display: flex;
+  flex-flow: column nowrap;
+  align-content: stretch;
+  align-items: stretch;
+  flex-grow: 1;
+  /* min-height: 100%; */
+  box-sizing: border-box;
 }
-
 
 /* ------------ ID ------------ */
 
-#links {
+#navLinks {
   display: flex;
   flex-flow: row nowrap;
 }
@@ -157,14 +204,24 @@ form {
 }
 
 #gallery {
-  /* border: red 1px solid; */
+  /* border: 1px solid red; */
   display: grid;
   grid-template-columns: auto auto auto;
 }
 
+#formHolder {
+	display: flex;
+	justify-content: center
+}
+
+#form3-1 {
+  padding: 1px;
+  text-align: center;
+}
+
 /* ------------ ID => ELEMENT ------------ */
 
-#links > div {
+#navLinks > div {
   flex-grow: 1;
   flex-shrink: 0;
   flex-basis: content;
@@ -178,6 +235,10 @@ form {
   /* top: 50%; */
   /* left: 50%; */
   /* transform: translate(-50%, -50%); */
+}
+
+#form3-1 > button {
+  padding: 1%;
 }
 
 /* ------------ ID => CLASS ------------ */
