made js target css root assigned correct names to css variables

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --color-1: #000000;
   --color-2: #ffff;
-  --placeholderText: #6b6969;
+  --color-3: #6b6969;
 }
 
 /* ------------ MEDIA QUERIES ------------ */
