--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --color-1: #000000;
   --color-2: #ffff;
-  --placeholderText: #6b6969;
+  --color-3: #6b6969;
 }
 
 /* ------------ MEDIA QUERIES ------------ */
@@ -14,24 +14,25 @@
 
 /* ------------ ELEMENTS ------------ */
 
-/*To delete - colors used for grid reference*/
+/*To delete - colors used for grid reference
 h3,
 h4,
 p {
   color: black;
-}
-
+}*/
+/*
 main,
 section,
 div,
 form,
 nav {
   border: 1px solid gray;
-}
+}*/
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  color: var(--placeholderText);
+  color: var(--color-2);
+  background-color: var(--color-1);
 }
 
 nav {
@@ -55,6 +56,7 @@ nav a {
 	text-align: center;
 	padding: 14px;
 	text-decoration: none;
+  color: var(--color-2)
 }
 
 h1 {
