--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   --color-1: #000000;
-  --color-2: #ffff;
+  --color-2: #dddddd;
   --color-3: #6b6969;
 }
 
@@ -14,25 +14,17 @@
 
 /* ------------ ELEMENTS ------------ */
 
-/*To delete - colors used for grid reference*/
-h3,
-h4,
-p {
-  color: black;
-}
-
-main,
+/* main,
 section,
 div,
 form,
 nav {
   border: 1px solid var(--placeholderBorder);
-}
+} */
 
 body {
-  font-size: var(--fontBig1);
   font-family: Arial, Helvetica, sans-serif;
-  color: var(--placeholderText);
+  color: var(--color-3);
 }
 
 nav {
@@ -67,7 +59,7 @@ form {
 }
 
 output {
-  border: 1px dashed var(--placeholderBorder);
+  border: 1px dashed var(--color-1);
 }
 
 /* ------------ ELEMENT => ELEMENT ------------ */
@@ -102,7 +94,7 @@ form {
 .allWrong {
 	border: 5px solid var(--placeholderBorder);
 	/* background-color: var(--color-2); */
-	color:  var(--placeholderText);
+	color: var(--color-3);
 }
 
 .formContainer {
@@ -122,7 +114,7 @@ form {
   align-items: center;
   justify-content: center;
   margin: 5px;
-  border: 6px solid var(--placeholderBorder);
+  border: 6px solidvar(--color-1);
   padding: 5px;
   text-align: center;
 }
@@ -136,7 +128,7 @@ form {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0); /* Fallback color */
+  background-color:var(--color-1); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black with opacity */
 }
 
