--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --color-1: #000000;
   --color-2: #ffff;
-  --color-3: #6b6969;
+  --color-3: #18182d;
 }
 
 /* ------------ MEDIA QUERIES ------------ */
@@ -32,6 +32,7 @@ nav {
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: var(--color-2);
+  background: radial-gradient(center, --color-1);
   background-color: var(--color-1);
 }
 
@@ -46,7 +47,7 @@ nav {
   display: grid;
   grid-template-columns: 1fr minmax(50px, 50%) minmax(50px, 15%);
   grid-template-rows: 1;
-  background-color: var(--color-1);
+  background-color: var(--color-3);
   align-items: center;
   box-sizing: border-box;
 }
@@ -60,8 +61,11 @@ nav a {
 }
 
 h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
   text-align: center;
-}
+} 
 
 section {
   margin: 5px;
@@ -72,10 +76,17 @@ form {
 	border: 2px dashed var(--color-1);
 	padding: 5px;
   width: fit-content;
+  background-color: var(--color-3);
 }
 
 output {
   border: 1px dashed var(--color-1);
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* ------------ ELEMENT => ELEMENT ------------ */
@@ -99,7 +110,7 @@ form > div {
 
 form {
   margin: 5px;
-  border: 2px dashed var(--NIGHT);
+  border: 2px dashed var(--color-1);
   padding: 5px;
 }
 
@@ -133,6 +144,7 @@ form {
   border: 6px solidvar(--color-1);
   padding: 5px;
   text-align: center;
+  background-color: var(--color-3);
 }
 
 .modal {
@@ -200,6 +212,17 @@ form {
   flex-flow: row nowrap;
 }
 
+#logo {
+  max-width: 80px;
+  padding: 20px;
+}
+
+#navPlanetMenu {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 #planet {
   width: 100%;
   display: grid;
@@ -228,8 +251,10 @@ form {
 }
 #planetImg {
   grid-area: planetImg;
-  width: auto;
+  width: 450px;
+  height: 450px;
   text-align: center;
+  object-fit: cover;
 }
 #infoRight {
   grid-area: planetInfoR;
@@ -268,8 +293,8 @@ form {
 
 #planetImg > img {
   border-radius: 50%;
-  width: 25%;
-  padding: 2px;
+  width: 60%;
+  padding: 10px;
   /* position: static; */
   /* top: 50%; */
   /* left: 50%; */
